20092
When autocompleting, you get suggestions that will fail.
```scala
scala> (1,2).
_1   canEqual   equals     invert         productElement    productPrefix   toString   zipped   
_2   copy       hashCode   productArity   productIterator   swap            x                   

scala> (1,2).zipped
<console>:12: error: No implicit view available from Int => scala.collection.TraversableLike[El1,Repr1].
       (1,2).zipped
             ^
```
